@@ -1,3 +1,4 @@
+- Added filter gravityflow_assignee_email_reminder_repeat_days and include depreciation notice for gravityflow_assignee_eamil_reminder_repeat_days.
 - Added security enhancements.
 - Added support for the forms attribute in the submit shortcode so the workflow forms can be filtered. e.g. [gravityflow page="submit" forms="1,2,3"]
 - Added support for the back_link back_link_text and back_link_url attributes in the status shortcode.
